--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,5 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Run tests with Maven
+      run: mvn -B test --file pom.xml
