--- a/server-plugin/pom.xml
+++ b/server-plugin/pom.xml
@@ -19,6 +19,7 @@
 		<module>server-plugin-buildspec-maven</module>
     	<module>server-plugin-buildspec-gradle</module>
     	<module>server-plugin-buildspec-node</module>
+	    <module>server-plugin-sso-openid</module>
     	<module>server-plugin-report-markdown</module>
    		<module>server-plugin-report-jest</module>
     	<module>server-plugin-report-clover</module>
